// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Routing initRouting() Should throw an error in case of slashes in route 1`] = `
"Routing elements should not contain '/' character.
The error caused by '/v1' route that has a 'user/retrieve' entry."
`;

exports[`Routing initRouting() Should throw an error in case of slashes in route 2`] = `
"Routing elements should not contain '/' character.
The error caused by 'v1/user/retrieve' entry."
`;
